# Projeto-X

./: CMakeLists.txt  Documentação do jogo do Pinguim.txt  README.md  README.txt  conanfile.txt  stb_image.cpp  trabalho.cpp
Rede/: cliente.cpp  servidor.cpp
src/: teste.cpp  trabalho.cpp
src/Game/: Game.cpp
src/Modelos/: Personagem.hpp  Pinguim.cpp  Pinguim.hpp
src/cenario/: Cenario.cpp
src/interface/: ElementoDocenario.hpp
src/uteis/: ElementoEnum.hpp  TipoElementoEnum.hpp
